// This has to be a separate pkg to avoid circular import problems with Go.
syntax = "proto3";

package protos.shared;

option go_package = "github.com/streamdal/streamdal/libs/protos/build/go/protos/shared";

// KVAction is a shared type that is used for protos.KVCommand and protos.KVStep.
// Note that only a subset of actions are used for protos.KVCommand (CREATE,
// UPDATE, DELETE, DELETE_ALL) while protos.KVStep uses most of them.
//
// protolint:disable:next ENUM_FIELD_NAMES_PREFIX
enum KVAction {
  KV_ACTION_UNSET = 0;
  KV_ACTION_GET = 1;
  KV_ACTION_CREATE = 2;
  KV_ACTION_UPDATE = 3;
  KV_ACTION_EXISTS = 4;
  KV_ACTION_DELETE = 5;
  KV_ACTION_DELETE_ALL = 6;
}
